WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
253314
imported/w3c/web-platform-tests/background-fetch/abort.https.window.html is flaky
https://bugs.webkit.org/show_bug.cgi?id=253314
Summary
imported/w3c/web-platform-tests/background-fetch/abort.https.window.html is f...
youenn fablet
Reported
2023-03-03 08:04:18 PST
imported/w3c/web-platform-tests/background-fetch/abort.https.window.html is flaky
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-03-03 08:04:32 PST
<
rdar://problem/106195333
>
youenn fablet
Comment 2
2023-03-07 06:17:49 PST
Pull request:
https://github.com/WebKit/WebKit/pull/11172
Mark Lam
Comment 3
2023-05-23 18:42:38 PDT
Pull request:
https://github.com/apple/WebKit/pull/612
Mark Lam
Comment 4
2023-05-23 19:09:01 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/14282
EWS
Comment 5
2023-05-24 15:44:10 PDT
Committed
264489@main
(37cf833410fa): <
https://commits.webkit.org/264489@main
> Reviewed commits have been landed. Closing PR #14282 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug